We can't use the be_app looper, since it can be already locked from another thread (for example, when quitting the app/window), and that would cause a deadlock. Fixes bug #1645.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@23995 a95241bf-73f2-0310-859d-f6bbb57e9c96